--- a/sass/animate.sass
+++ b/sass/animate.sass
@@ -20,3 +20,6 @@ nav li:nth-child(2)
 
 nav li:nth-child(3)
   +experimental(animation-delay, 4.1s)
+
+nav li:nth-child(4)
+  +experimental(animation-delay, 4.4s)
